--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
   <!-- Preconnect to critical origins -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="preconnect" href="https://unpkg.com" crossorigin />
-  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin />
 
   <!-- Preload LCP image (smallest WebP for fastest load) -->
   <link rel="preload" as="image" type="image/webp" href="self-300.webp" fetchpriority="high" 
@@ -35,26 +33,63 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Cinzel:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'" />
   <noscript><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Cinzel:wght@400;700&display=swap" rel="stylesheet" /></noscript>
 
-  <!-- Tailwind CSS: defer to not block render -->
-  <script defer src="https://cdn.tailwindcss.com"></script>
-  <script defer>
-    document.addEventListener('DOMContentLoaded', function() {
-      try {
-        if (typeof tailwind !== 'undefined') {
-          tailwind.config = {
-            theme: {
-              extend: {
-                fontFamily: { poppins: ['Poppins','sans-serif'], cinzel: ['Cinzel','serif'] },
-                colors: {
-                  cv: { blue:'#1e3a5f', blueDark:'#0d1b2a', blueLight:'#2a5080', accent:'#7eb8e3', gold:'#d4a843', violet:'#6c3fa0', rose:'#a04070' }
-                }
-              }
-            }
-          };
-        }
-      } catch(e) {}
-    });
-  </script>
+  <!-- Tailwind utility classes replaced with inline CSS (eliminates 124KB JS + 630ms TBT) -->
+  <style>
+    /* === Tailwind Utility Replacements === */
+    .flex { display: flex; }
+    .flex-col { flex-direction: column; }
+    .flex-wrap { flex-wrap: wrap; }
+    .items-center { align-items: center; }
+    .justify-center { justify-content: center; }
+    .justify-between { justify-content: space-between; }
+    .gap-2 { gap: 0.5rem; }
+    .gap-4 { gap: 1rem; }
+    .relative { position: relative; }
+    .absolute { position: absolute; }
+    .inset-0 { inset: 0; }
+    .overflow-hidden { overflow: hidden; }
+    .rounded-full { border-radius: 9999px; }
+    .rounded-2xl { border-radius: 1rem; }
+    .text-white { color: #fff; }
+    .z-10 { z-index: 10; }
+    .w-full { width: 100%; }
+    .mb-5 { margin-bottom: 1.25rem; }
+    .my-4 { margin-top: 1rem; margin-bottom: 1rem; }
+    .p-6 { padding: 1.5rem; }
+    .px-6 { padding-left: 1.5rem; padding-right: 1.5rem; }
+    .py-4 { padding-top: 1rem; padding-bottom: 1rem; }
+    .py-5 { padding-top: 1.25rem; padding-bottom: 1.25rem; }
+    .py-6 { padding-top: 1.5rem; padding-bottom: 1.5rem; }
+    .pb-6 { padding-bottom: 1.5rem; }
+    .pt-10 { padding-top: 2.5rem; }
+    .left-4 { left: 1rem; }
+    .right-4 { right: 1rem; }
+    .top-1\/2 { top: 50%; }
+    .-translate-y-1\/2 { transform: translateY(-50%); }
+    .opacity-\[0\.07\] { opacity: 0.07; }
+
+    /* Responsive: sm (640px+) */
+    @media (min-width: 640px) {
+      .sm\:flex-row { flex-direction: row; }
+      .sm\:items-center { align-items: center; }
+      .sm\:justify-between { justify-content: space-between; }
+      .sm\:p-8 { padding: 2rem; }
+      .sm\:px-10 { padding-left: 2.5rem; padding-right: 2.5rem; }
+    }
+
+    /* Responsive: md (768px+) */
+    @media (min-width: 768px) {
+      .md\:flex-row { flex-direction: row; }
+      .md\:my-8 { margin-top: 2rem; margin-bottom: 2rem; }
+      .md\:w-1\/3 { width: 33.333333%; }
+      .md\:w-2\/3 { width: 66.666667%; }
+    }
+
+    /* Responsive: lg (1024px+) */
+    @media (min-width: 1024px) {
+      .lg\:p-10 { padding: 2.5rem; }
+    }
+  </style>
 
   <!-- Three.js importmap (modules loaded lazily on demand) -->
   <script type="importmap">
